tf_modules/gcp/system_components/values/traefik.yaml
---
additionalArguments:
- --certificatesresolvers.letsencrypt=true
- --certificatesresolvers.letsencrypt.acme.httpchallenge=true
- --certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web
- --certificatesresolvers.letsencrypt.acme.storage=/certificates/acme.json

ports:
  web:
    nodePort: 32080
  websecure:
    nodePort: 32443

persistence:
  enabled: false

deployment:
  enabled: true

service:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "ingress.${domain}." # TODO: fetch this from a secret

ingressRoute:

  healthcheck:
    enabled: true
    entryPoints:
    - web

  dashboard:
    enabled: true
    annotations:
      external-dns.alpha.kubernetes.io/target: ingress.${domain} # TODO: fetch this from a secret

    matchRule: "Host(`traefik.${domain}`)"
    middlewares:
    - name: redirect-to-https
    - name: ak-outpost-forwardauth

    entryPoints:
    - web # needed for acme challeng
    - websecure

# On first Flux Bootstrap, CRDs don't exist, but traefik's
# Helm chart is thoughtfully designed to allow us to create
# Custom Resources when installing this HelmRelease
extraObjects:

#################
## Middlewares ##
#################

- apiVersion: traefik.io/v1alpha1
  kind: Middleware
  metadata:
    name: redirect-to-https
    namespace: system
  spec:
    redirectScheme:
      scheme: https
      permanent: true

###################
## IngressRoutes ##
###################

- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      external-dns.alpha.kubernetes.io/target: ingress.${domain}
    labels:
      app.kubernetes.io/instance: authentik-system
      app.kubernetes.io/managed-by: Flux
      app.kubernetes.io/name: authentik
    name: authentik
    namespace: system
  spec:
    entryPoints:
    - web
    - websecure
    routes:
    - kind: Rule
      match: Host(`auth.${domain}`)
      middlewares:
      - name: redirect-to-https
      services:
      - kind: Service
        name: authentik-server
        port: 80
    tls:
      certResolver: letsencrypt
